# VRS

./: .gitignore  README.md  docker-compose.yml
doc/: Praca dyplomowa.docx  SWS.docx
src/Module.Boilerplate/: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  tox.ini
src/Module.Boilerplate/app/: api.py  utils.py
src/Module.Boilerplate/app/core/: settings.py  utils.py
src/Module.Boilerplate/app/model/: about.py  prediction.py
src/Module.Boilerplate/app/router/: about.py  prediction.py  router.py
src/Module.Boilerplate/app/service/: prediction.py
src/Module.DIDN/: Dockerfile  README.md  detect.py  requirements-gpu.txt  requirements.txt
src/Module.DSDN/: README.md  extract_audio.py  extract_spec.py  nn_arch.py  requirements-dsdn.txt  tools.py  train.py  yt_downloader.py
src/Module.FGN/: Dockerfile  README.md  config.py  data.py  data_transformation.py  export_model.py  model.py  model_final.h5  predict.py  predict_on_batch.py  requirements-fgn.txt  train.py
src/Module.FGN/testset/: fight.avi
src/Module.Main/: .dockerignore  .env  .env.example  Dockerfile  config.py  didn.py  fgn.py  fgn_data_transformation.py  grpc_manager.py  log.py  main.py  requirements.txt  video_cap.py  vrn.py
src/Module.VRN/: .dockerignore  Dockerfile  README.md  models.config  raft_optical_flow.py  requirements-vrn.txt  vrn.py
src/Module.VRN/VGG16/: README.md  vgg16.py
tools/: frameExtractor.ipynb
tools/OpenCV/: README.md  dataset_conv.py  opencv_optical_flow.py  requirements-opencv.txt
tools/RAFT/: README.md  dataset_conv.py  raft_optical_flow.py  requirements-raft.txt
tools/RAFT/core/: raft.py
tools/RAFT/core/utils/: utils.py
tools/Segmentation/: README.md  dataset_conv.py  keras_segmentation.py  requirements-seg.txt
